fixed spacing on nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -7,43 +7,8 @@
 
 body {
   /* overflow: hidden; */
-  display: absolute;
-  justify-content: center;
-  align-items: center;
+  /* display: absolute; */
+  /* justify-content: center; */
+  /* align-items: center; */
   background-color: #5F7470 ;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
