--- a/src/component/about/About.css
+++ b/src/component/about/About.css
@@ -1,13 +1,15 @@
-.page {
+.page_about {
     display: flex;
+    position: relative;
+    flex-direction: row;
     width: 100%;
     height: 100vh;
 }
 
 .backgroundColour {
     display: flex;
-    width: 50%;
     flex-direction: column;
+    width: 50%;
 }
 
 .right {
@@ -19,11 +21,12 @@
     justify-content: center;
     align-items: center;
     background-color: #B8BDB5;
-    font-size: 5em;
+    height: 100%;
 }
 
 .title {
     font-family: Tangerine;
+    font-size: 10em;
 }
 
 .mainText {
