--- a/src/component/bottomNavigationbar/BottomNagivationBar.css
+++ b/src/component/bottomNavigationbar/BottomNagivationBar.css
@@ -1,12 +1,3 @@
-.main {
-    display: flex;
-    color: #D2D4C8;
-    position: absolute;
-    bottom: 2vh;
-    left: 50%;
-    transform: translate(-50%, 0);
-}
-
 .option{
     padding: 0 5px 0 5px;
     cursor: pointer;
