--- a/src/component/logo/Logo.css
+++ b/src/component/logo/Logo.css
@@ -1,23 +1,18 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-/* div {
-    width: 100%;
-    height: 100vh;
 } */
 
-#name {
+/* #name {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     animation: fill 0.5s ease forwards 4s;
-}
+} */
 
-.logo {
+/* .logo {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,4 +20,4 @@
     color: white;
     font-size: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+} */
