--- a/src/component/welcome/Welcome.css
+++ b/src/component/welcome/Welcome.css
@@ -1,20 +1,36 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     background-color: transparent;
-}
+} */
 
-.page {
+.page_welcome {
     width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-#logo {
+.main {
+    color: #D2D4C8;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: center; */
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 3vh;
+    /* transform: translate(-50%, 0); */
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+} 
+
+#logo {
     animation: fill 0.5s ease forwards 4s;
 }
 
